--- a/recipe_app/recipes/templates/recipes/create_with_image.html
+++ b/recipe_app/recipes/templates/recipes/create_with_image.html
@@ -71,12 +71,12 @@
 
     // Setup buttons
     captureButton.textContent = 'Foto aufnehmen';
-    captureButton.className = 'submit-button';
+    captureButton.className = 'submit-button-alternative';
     captureButton.style.marginTop = '1rem';
 
     retakeButton.textContent = 'Neues Foto';
-    retakeButton.className = 'submit-button';
-    retakeButton.style.marginTop = '1rem';
+    retakeButton.className = 'submit-button-alternative';
+    retakeButton.style.marginTop = '2rem';
     retakeButton.style.display = 'none';
 
     // Setup preview image
