--- a/recipe_app/recipes/templates/recipes/previews.html
+++ b/recipe_app/recipes/templates/recipes/previews.html
@@ -3,19 +3,14 @@
 {% load static %}
 
 {% block header-middle %}
-
+    <span style="font-size: 2rem; font-weight: 500; margin-bottom: 2rem;" class="hide-mobile">
+        Rezept-Vorschläge
+    </span>
 {% endblock header-middle %}
 
 
 {% block main-content %}
 
-<div class="row-wrapper section-row" style="margin-top: 0;">
-    <div class="row-content">
-        <div class="widget">
-            <span style="font-weight: 600; font-size: 2rem; ">Wie wäre es hiermit?</span>
-        </div>
-    </div>
-</div>
 
 <div class="spinner-background" id="loading-spinner-bg" style="display: none;"></div>
     <div class="spinner-overlay" id="loading-spinner-card" style="display: none;">
@@ -25,7 +20,7 @@
         </div>
     </div>
 
-<div class="row-wrapper section-row">
+<div class="row-wrapper section-row" style="margin-top: 0;">
     <div class="row-content">
         {% for preview in recipe_previews %}
         
@@ -37,7 +32,7 @@
             <button type="submit">
                 <div class="widget card card-clickable">
                     <div class="card-recipe-container">
-                        <div class="recipe-properties-container">
+                        <div class="recipe-properties-container" style="padding: 0; margin-bottom: 0.5rem;">
                             <div class="recipe-difficulty recipe-difficulty-{{ preview.difficulty }}">
                                 {% for value, label in difficulty_choices %}
                                     {% if value == preview.difficulty %}
@@ -47,9 +42,9 @@
                             </div>
                             <div class="recipe-time"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="15" y1="14" y2="11"/><circle cx="12" cy="14" r="8"/></svg> {{ preview.time}}</div>
                         </div>
-                        <div class="title">{{ preview.title }}</div>
-                        <div class="description">{{ preview.description }}</div>
-                        <div class="main-ingredients"><span style="font-weight: 400">Hauptzutaten:</span><br>
+                        <div class="title" style="font-size: 1.4rem; line-height: 2rem; margin-bottom: 0.4rem;">{{ preview.title }}</div>
+                        <div class="description" style="font-size: 1.2rem;">{{ preview.description }}</div>
+                        <div class="additional-ingredients"><span style="font-weight: 400">Hauptzutaten:</span><br>
                             <span>
                                 {{ preview.main_ingredients|join:", " }}
                             </span>
