--- a/recipe_app/recipe_app/templates/recipe_app/layout.html
+++ b/recipe_app/recipe_app/templates/recipe_app/layout.html
@@ -16,8 +16,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'recipes/favicon/favicon-180x180.png' %}">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}">
-    <link rel="stylesheet" href="{% static 'recipe_app/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'recipes/css/styles.css' %}?v=1.1">
+    <link rel="stylesheet" href="{% static 'recipe_app/css/styles.css' %}?v=1.1">
     {% block extra_css %}{% endblock %}
     
     <title>ChatRCP</title>
