--- a/recipe_app/chefs/templates/registration/logout.html
+++ b/recipe_app/chefs/templates/registration/logout.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block extra_css%}
-    <link rel="stylesheet" href="{% static 'registration/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'registration/css/styles.css' %}?v=1.1">
 {% endblock extra_css%}
 
 {% block main-content %}
